fix: issues shared by frappe team's initial review
fixed issues shared in comment
- Refresh Icon Title ( also added safe guard to strip es prefix )
- changed card shadow variable to more subtle shadow
- reduced padding for padding-sm variable
- removed fixed height which caused overflow of long content for class like-disabled-input
- changed frappe-card box-shadow to border to have more flat look
- added green color back to avatar
- changed form-section-description text size as per new text-size
- fixed double scrollbar issue in notification list

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -6,7 +6,7 @@ $disabled-input-height: 22px;
 	--brand-color: var(--primary);
 
 	--padding-xs: 5px;
-	--padding-sm: 8px;
+	--padding-sm: 6px;
 	--padding-md: 15px;
 	--padding-lg: 20px;
 	--padding-xl: 30px;
@@ -21,7 +21,7 @@ $disabled-input-height: 22px;
 
 
 	--modal-shadow: var(--shadow-md);
-	--card-shadow: var(--shadow-2xl);
+	--card-shadow: var(--shadow-sm);
 	--btn-shadow: var(--shadow-xs);
 
 
