--- a/frappe/public/scss/common/global.scss
+++ b/frappe/public/scss/common/global.scss
@@ -28,6 +28,8 @@ html, body {
 
 .frappe-card {
 	@include card();
+	box-shadow: none;
+	border: 1px solid var(--gray-300);
 }
 
 .frappe-control[data-fieldtype="Select"].frappe-control[data-fieldname="color"] {
@@ -56,7 +58,6 @@ html, body {
 		/* for Chrome */
 		-webkit-appearance: none;
 
-		padding-top: 3px;
 	}
 
 	.select-icon {
