--- a/frappe/public/scss/desk/form.scss
+++ b/frappe/public/scss/desk/form.scss
@@ -36,7 +36,7 @@
 
 	.form-section-description {
 		margin-bottom: 10px;
-		font-size: var(--text-xl);
+		font-size: var(--text-base);
 		color: var(--gray-900);
 	}
 
