--- a/frappe/public/scss/desk/notification.scss
+++ b/frappe/public/scss/desk/notification.scss
@@ -62,7 +62,7 @@
 
 	.notification-list-body {
 		// margin: 10px 0px;
-		max-height: 500px;
+		max-height: 450px;
 		overflow-y: auto;
 
 		.panel-events, .panel-notifications {
